add min-width to sections

--- a/index.html
+++ b/index.html
@@ -535,6 +535,10 @@
       transform: scaleX(-1);
     }
 
+    section {
+      min-width: 300px;
+    }
+
     section:not(.intro):not(.outro) {
       max-width: 800px;
       margin: 0 auto;
