--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
     <section class="education">
       <h2>If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span></h2>
       <ol class="education-list">
-        <li>
+        <li class="left-to-right-connection">
           <div class="bullet">2020</div>
           <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 20 20 Q 20 52, 40 50 T 60 80" />
+            <path d="M 20 20 Q 20 50, 40 50 T 60 80" />
           </svg>
           <div class="content">
             <h3>Bachelor of Arts in Multilingual Communication</h3>
             <h4>University of Geneva, Switzerland</h4>
           </div>
         </li>
-        <li style="margin-left: 40px">
+        <li class="right-to-left-connection">
           <div class="bullet">2018</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px" style="left: -40px">
-            <path d="M 60 20 Q 60 52, 40 50 T 20 80" />
+          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
+            <path d="M 60 20 Q 60 50, 40 50 T 20 80" />
           </svg>
           <div class="content">
             <h3>Erasmus+ Exchange</h3>
@@ -334,20 +334,20 @@
     <section class="education">
       <h2>If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span></h2>
       <ol class="education-list">
-        <li>
+        <li class="left-to-right-connection">
           <div class="bullet">2020</div>
           <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 20 20 Q 20 52, 40 50 T 60 80" />
+            <path d="M 20 20 Q 20 50, 40 50 T 60 80" />
           </svg>
           <div class="content">
             <h3>Bachelor of Arts in Multilingual Communication</h3>
             <h4>University of Geneva, Switzerland</h4>
           </div>
         </li>
-        <li style="margin-left: 40px">
+        <li class="right-to-left-connection">
           <div class="bullet">2018</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px" style="left: -40px">
-            <path d="M 60 20 Q 60 52, 40 50 T 20 80" />
+          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
+            <path d="M 60 20 Q 60 50, 40 50 T 20 80" />
           </svg>
           <div class="content">
             <h3>Erasmus+ Exchange</h3>
@@ -815,6 +815,14 @@
       fill: transparent;
     }
 
+    .education-list .right-to-left-connection {
+      margin-left: 40px;
+    }
+
+    .education-list .right-to-left-connection .bullet-connection {
+      left: -40px;
+    }
+
     .education-list li .content {
       margin-left: 14px;
     }
@@ -1136,8 +1144,7 @@
       bodyShift = 0
       body.style.left = '' + bodyShift
       showBelowFoldSections()
-      connectTimelineBullets(englishPage.querySelector('.courses-list'))
-      connectTimelineBullets(englishPage.querySelector('.experience-list'))
+      connectAllTimelineBullets(englishPage)
       forceEnglishPageReflow()
     }
 
@@ -1147,8 +1154,7 @@
       bodyShift = 100
       body.style.left = `-${bodyShift}vw`
       showBelowFoldSections()
-      connectTimelineBullets(spanishPage.querySelector('.courses-list'))
-      connectTimelineBullets(spanishPage.querySelector('.experience-list'))
+      connectAllTimelineBullets(spanishPage)
     }
 
     // Force a reflow so that Safari takes into account the scrollbar
@@ -1190,15 +1196,59 @@
       )
     }
 
-    function connectTimelineBullets(element) {
-      const bullets = Array.from(element.querySelectorAll('.bullet'))
-      const bulletConnectionSvgs = Array.from(element.querySelectorAll('.bullet-connection'))
-      const bulletConnectionPaths = Array.from(element.querySelectorAll('.bullet-connection path'))
+    function connectAllTimelineBullets(context) {
+      connectLeftToRightTimelineBullets(context)
+      connectRightToLeftTimelineBullets(context)
+      connectStraightTimelineBullets(context.querySelector('.courses-list'))
+      connectStraightTimelineBullets(context.querySelector('.experience-list'))
+    }
+
+    function connectStraightTimelineBullets(context) {
+      const bullets = Array.from(context.querySelectorAll('.bullet'))
+      const bulletConnectionSvgs = Array.from(context.querySelectorAll('.bullet-connection'))
+      const bulletConnectionPaths = Array.from(context.querySelectorAll('.bullet-connection path'))
 
       for (let i = 0; i < bullets.length - 1; ++i) {
         const diff = bullets[i + 1].getBoundingClientRect().top - bullets[i].getBoundingClientRect().top
-        bulletConnectionSvgs[i].setAttribute('height', diff + 40 + 'px')
+        bulletConnectionSvgs[i].setAttribute('height', `${diff + 40}px`)
         bulletConnectionPaths[i].setAttribute('d', `M 20 20 L 20 ${diff + 20}`)
+      }
+    }
+
+    function connectLeftToRightTimelineBullets(context) {
+      const connections = context.querySelectorAll('.left-to-right-connection')
+
+      for (const connection of connections) {
+        const bullet = connection.querySelector('.bullet')
+        const bulletConnectionSvg = connection.querySelector('.bullet-connection')
+        const bulletConnectionPath = connection.querySelector('.bullet-connection path')
+
+        const nextConnection = connection.nextElementSibling
+        const nextBullet = nextConnection.querySelector('.bullet')
+
+        const diff = nextBullet.getBoundingClientRect().top - bullet.getBoundingClientRect().top
+        const svgHeight = diff + 40
+        bulletConnectionSvg.setAttribute('height', `${svgHeight}px`)
+        bulletConnectionPath.setAttribute('d', `M 20 20 Q 20 ${svgHeight / 2}, 40 ${svgHeight / 2} T 60 ${svgHeight - 20}`)
+      }
+    }
+
+    function connectRightToLeftTimelineBullets(context) {
+      const connections = context.querySelectorAll('.right-to-left-connection')
+
+      for (const connection of connections) {
+        const bullet = connection.querySelector('.bullet')
+        const bulletConnectionSvg = connection.querySelector('.bullet-connection')
+        const bulletConnectionPath = connection.querySelector('.bullet-connection path')
+
+        const nextConnection = connection.nextElementSibling
+        const nextBullet = nextConnection.querySelector('.bullet')
+
+        const diff = nextBullet.getBoundingClientRect().top - bullet.getBoundingClientRect().top
+        const svgHeight = diff + 40
+        bulletConnectionSvg.setAttribute('height', `${svgHeight}px`)
+        bulletConnectionPath.setAttribute('d', `M 20 20 Q 20 ${svgHeight / 2}, 40 ${svgHeight / 2} T 60 ${svgHeight - 20}`)
+        bulletConnectionPath.setAttribute('d', `M 60 20 Q 60 ${svgHeight / 2}, 40 ${svgHeight / 2} T 20 ${svgHeight - 20}`)
       }
     }
   </script>
