enlarge outro waves a tad for Safari

--- a/index.html
+++ b/index.html
@@ -872,9 +872,9 @@
 
     .outro-waves {
       position: relative;
-      left: 0;
+      left: -1px;
       top: -1px;
-      width: calc(100% + 5px);
+      width: calc(100% + 6px);
     }
 
     main[lang=es] .outro-waves {
