make contact form more spacious on mobile viewports

--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,12 @@
         margin-top: 8px;
       }
     }
+
+    @media (max-height: 650px) {
+      .outro .contact-form textarea {
+        max-height: 150px;
+      }
+    }
   </style>
 
   <script>
