improve intro & outro styles on mobile viewports

--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
 
     .intro {
       height: 100vh;
+      min-height: 700px;
       background-image: linear-gradient(#412565, #ab6bb0);
       position: relative;
     }
@@ -865,6 +866,7 @@
 
     .outro {
       height: 95vh;
+      min-height: 600px;
       margin-top: 100px;
       background-image: linear-gradient(#ab6bb0, #412565);
       position: relative;
@@ -1049,7 +1051,7 @@
       }
     }
 
-    @media (max-height: 650px) {
+    @media (max-height: 700px) {
       .outro .contact-form textarea {
         max-height: 150px;
       }
