--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
-            A <strong>professional translator</strong> something something.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, ad culpa! Illum, aliquam ratione aut id consequuntur optio nesciunt voluptatibus laboriosam molestiae iure pariatur veritatis ad sit laborum architecto minus.
+            A <strong>professional translator</strong> working from English, French and Galician into Spanish. I grew up in Galicia (Spain) but spent a few years in France, just a few minutes away from Geneva. When I’m not obsessing over language, you can find me knitting or maybe doing some yoga. I’m also passionate about mental health, as well as nutrition. You can make my heart sing with creative projects, which is why I love transcreation and literary translation. And if you think you might be liking what you’re seeing, keep on reading!
           </p>
           <div class="intro-links">
             <a href="#contact-form-en" title="Scroll down to contact form">Contact</a>
