Fix list style for work experience by adding CSS

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
             <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>As the Spanish side of NutritionFacts grew, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new job. And there began this incredible journey I’ve been in, where I’ve learned and developed so many skills over the years, while soaking up everything that University of Geneva had to offer from the academic side of things to hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!). This is a part-time position that allows me to have the flexibility that this freelancer life requires, while also giving me so much love, support and team work from my peers, who I get to work with on a daily basis. It involves managing the social media pages and social media volunteers, translating content, and assisting with general tasks related to the management of the Spanish website as needed.</p>
             <p>Some of the things I’m in charge with include, but are not limited to:</p>
-            <ul>
-              <li type="circle">Manage the translations of social media content using Asana</li>
-              <li type="circle">Execute the transcreation and copywriting for new campaigns in Spanish</li>
-              <li type="circle">Schedule Spanish content using both social media scheduling systems and the administrative functions of the platforms themselves</li>
-              <li type="circle">Work with the team on analyzing Spanish SM metrics and brainstorm new ideas to reach our strategic planning goals</li>
-              <li type="circle">Translate and export Adobe graphics for use across platforms</li>
-              <li type="circle">Create and edit content catered to the Spanish-speaking public</li>
-              <li type="circle">Proofread the weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
+            <ul class="bulleted">
+              <li>Manage the translations of social media content using Asana</li>
+              <li>Execute the transcreation and copywriting for new campaigns in Spanish</li>
+              <li>Schedule Spanish content using both social media scheduling systems and the administrative functions of the platforms themselves</li>
+              <li>Work with the team on analyzing Spanish SM metrics and brainstorm new ideas to reach our strategic planning goals</li>
+              <li>Translate and export Adobe graphics for use across platforms</li>
+              <li>Create and edit content catered to the Spanish-speaking public</li>
+              <li>Proofread the weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
             </ul>
             <p>*FYI: Please beware that not all content seen in NutritionFacts’s platforms has been translated or edited by me; this includes social media. A lot of the translations are still done by volunteers.</p>
           </div>
@@ -500,6 +500,10 @@
       list-style: none;
       margin: 0;
       padding: 0;
+    }
+
+    ul.bulleted {
+      list-style: initial;
     }
 
     main {
