Add contact info

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <li>Create and edit content catered to the Spanish-speaking public</li>
               <li>Proofread the weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
             </ul>
-            <p>*FYI: Please beware that not all content seen in NutritionFacts’s platforms has been translated or edited by me; this includes social media. A lot of the translations are still done by volunteers.</p>
+            <p>FYI: Please beware that not all content seen in NutritionFacts’s platforms has been translated or edited by me; this includes social media. A lot of the translations are still done by volunteers.</p>
           </div>
         </li>
       </ol>
@@ -214,7 +214,7 @@
           <div class="contact-side">
             <div class="contact-message">
               <h2><span class="contact-title-content">Reach out! <span class="emoji">📝</span></span></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
+              <p>Got a project you might want me to collaborate on? Any questions about my services and what I’m able to do? This is your chance! Shoot me a message and let’s chat. And don’t worry if what you’re looking for isn’t mentioned or included in this page, because it never hurts to ask, and I’m always happy to learn and work on new stuff!</p>
             </div>
             <div class="back-to-top-link">
               <a href="#intro-en">Back to top ↑</a>
