Add intro to ES side

--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
             <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
-            A <strong>professional translator</strong> something something.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, ad culpa! Illum, aliquam ratione aut id consequuntur optio nesciunt voluptatibus laboriosam molestiae iure pariatur veritatis ad sit laborum architecto minus.
+            Amante del inglés que acabó de <strong>traductora profesional</strong> por cosas del destino. Soy gallega de nacimiento, pero pasé varios años en Francia, al lado de Ginebra. Me encanta aprender, así que siempre estoy buscando cursos. Si no estoy tejiendo o leyendo, me encontrarás obsesionándome con las comas mal puestas. Siempre he sido amante de la nutrición, pero me encanta lo creativo, por eso busco especializarme en literaria y transcreación. También tengo amplia experiencia con el mundo equino y la equitación. Sin embargo, hago frente a cualquier texto sin tapujos.
           </p>
           <div class="intro-links">
             <a href="#contact-form-es" title="Scroll down to contact form">Contact</a>
