Changes to ES footer and contact info

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           <div class="contact-side">
             <div class="contact-message">
               <h2><span class="contact-title-content">Reach out! <span class="emoji">📝</span></span></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
+              <p>¿Quieres colaborar en algún proyecto? ¿Tienes alguna pregunta sobre mis servicios que no ves respondida en mi página? ¡Adelante! No dudes en contactarme para lo que sea. Aunque sea algo no mencionado en esta página, seguro que podemos hablarlo.</p>
             </div>
             <div class="back-to-top-link">
               <a href="#intro-es">Back to top ↑</a>
@@ -462,7 +462,7 @@
         </div>
       </div>
       <small class="small-print">
-        Website made with love ♥️ by yours truly and me husband
+        Esta página web ha sido hecha con todo el cariño del mundo ♥️ gracias a la ayuda de mi marido
       </small>
     </section>
   </main>
