Add several ES translations

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </section>
 
     <section class="services">
-      <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇</span></h2>
+      <h2>No soy <italic>superwoman</italic>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-es">Translation</li>
@@ -292,7 +292,7 @@
     </section>
 
     <section class="tools">
-      <h2>These are some of the <strong>tools</strong> I've used <span class="emoji">🛠</span></h2>
+      <h2>Estas son algunas de las <strong>herramientas</strong> que sé usar para mi trabajo <span class="emoji">🛠</span></h2>
       <ul class="tools-list">
         <li>
           <a target="_blank" href="https://adobe.com/products/photoshop.html">
@@ -340,7 +340,7 @@
     </section>
 
     <section class="education">
-      <h2>If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span></h2>
+      <h2>Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong> <span class="emoji">🎓</span></h2>
       <ol class="education-list">
         <li class="left-to-right-connection">
           <div class="bullet">2020</div>
@@ -348,8 +348,8 @@
             <path d="M 20 20 Q 20 50, 40 50 T 60 80" />
           </svg>
           <div class="content">
-            <h3>Bachelor of Arts in Multilingual Communication</h3>
-            <h4>University of Geneva, Switzerland</h4>
+            <h3>Grado en Comunicación Multilingüe</h3>
+            <h4>Universidad de Ginebra, Suiza</h4>
           </div>
         </li>
         <li class="right-to-left-connection">
@@ -358,22 +358,22 @@
             <path d="M 60 20 Q 60 50, 40 50 T 20 80" />
           </svg>
           <div class="content">
-            <h3>Erasmus+ Exchange</h3>
-            <h4>Heriot-Watt University, Scotland</h4>
+            <h3>Intercambio Erasmus+</h3>
+            <h4>Heriot-Watt University, Escocia</h4>
           </div>
         </li>
         <li>
           <div class="bullet">2021</div>
           <div class="content">
             <h3>Experto en Traducción y Marketing: Transcreación y Publicidad Multilingüe</h3>
-            <h4>ISTRAD (Instituto Superior de Estudios Lingüísticos y Traducción), Spain</h4>
+            <h4>ISTRAD (Instituto Superior de Estudios Lingüísticos y Traducción), España</h4>
           </div>
         </li>
       </ol>
     </section>
 
     <section class="courses">
-      <h2>And I intend to keep learning, so I've also done these <strong>courses</strong> <span class="emoji">📚</span></h2>
+      <h2>Nunca pienso dejar de aprender, así que también he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
       <ol class="courses-list education-list">
         <li>
           <div class="bullet">2020</div>
@@ -406,7 +406,7 @@
     </section>
 
     <section class="experience">
-      <h2>Here is my <strong>professional experience</strong> so far <span class="emoji">👵</span></h2>
+      <h2>Esto es lo que se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span></h2>
       <ol class="experience-list education-list">
         <li>
           <div class="bullet">2016</div>
@@ -414,7 +414,7 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
+            <h3>Traductora voluntaria para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi aut fugit laborum modi fuga quibusdam qui suscipit ex impedit saepe voluptate animi consequatur quas officiis temporibus corrupti eaque, ullam maiores recusandae ab vel minima provident voluptas! Necessitatibus, provident tempora nulla labore asperiores ut, voluptate numquam fuga impedit exercitationem hic eos quos, cumque adipisci neque. Quia, sint unde explicabo non cupiditate est quo repellendus mollitia temporibus? Quasi error quas dolorem expedita animi maxime libero fuga veritatis est, cumque, rerum blanditiis reiciendis delectus voluptates vitae, illo ad consequuntur iste voluptatum. Fugit excepturi voluptatem nisi dicta velit deleniti doloremque voluptas. Voluptatum soluta dolores cumque reiciendis minima ipsam est facere eos veritatis repellendus modi, maxime vel porro ipsa nisi nesciunt magnam totam incidunt? Aperiam quia hic perspiciatis aliquid numquam, dolore aliquam odit repudiandae quo ab ratione rerum! Cupiditate aut sunt totam nostrum maxime harum eum architecto, facilis consectetur id quos? Fugit quisquam voluptas, mollitia quae expedita ullam! Quibusdam, commodi ipsum suscipit praesentium ullam a repellat, sed nostrum eveniet modi deleniti odit enim delectus perferendis optio possimus blanditiis reiciendis velit ad eaque voluptates id consequuntur!</p>
             <p>Error ex obcaecati ab placeat ratione, dolor, eveniet dolorem eligendi consequatur, voluptate doloremque commodi enim laborum dolore quis perspiciatis neque laudantium id qui sequi itaque dignissimos nam ipsa in. Assumenda veritatis animi possimus, corporis saepe perspiciatis odio repellat facilis cupiditate, modi architecto quibusdam, sed eaque necessitatibus. Laboriosam tenetur qui eos, recusandae laborum optio doloribus similique dolor, porro repellat facere. A corporis iste nobis doloribus sequi recusandae laborum veritatis placeat, ipsa consequuntur nesciunt cupiditate eaque necessitatibus maiores asperiores, ex, voluptate error! Corrupti debitis tempore nam soluta, architecto, voluptates dolor esse quaerat amet blanditiis voluptate aliquid tempora recusandae magnam sit provident ipsa, obcaecati ex totam delectus at reiciendis? Consectetur magni quam atque dignissimos eum culpa, consequatur at quaerat enim ipsum nobis cum!</p>
           </div>
@@ -422,7 +422,7 @@
         <li>
           <div class="bullet">2018</div>
           <div class="content">
-            <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
+            <h3>Coordinadora de las redes sociales y del proyecto en español para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi aut fugit laborum modi fuga quibusdam qui suscipit ex impedit saepe voluptate animi consequatur quas officiis temporibus corrupti eaque, ullam maiores recusandae ab vel minima provident voluptas! Necessitatibus, provident tempora nulla labore asperiores ut, voluptate numquam fuga impedit exercitationem hic eos quos, cumque adipisci neque. Quia, sint unde explicabo non cupiditate est quo repellendus mollitia temporibus? Quasi error quas dolorem expedita animi maxime libero fuga veritatis est, cumque, rerum blanditiis reiciendis delectus voluptates vitae, illo ad consequuntur iste voluptatum. Fugit excepturi voluptatem nisi dicta velit deleniti doloremque voluptas. Voluptatum soluta dolores cumque reiciendis minima ipsam est facere eos veritatis repellendus modi, maxime vel porro ipsa nisi nesciunt magnam totam incidunt? Aperiam quia hic perspiciatis aliquid numquam, dolore aliquam odit repudiandae quo ab ratione rerum! Cupiditate aut sunt totam nostrum maxime harum eum architecto, facilis consectetur id quos? Fugit quisquam voluptas, mollitia quae expedita ullam! Quibusdam, commodi ipsum suscipit praesentium ullam a repellat, sed nostrum eveniet modi deleniti odit enim delectus perferendis optio possimus blanditiis reiciendis velit ad eaque voluptates id consequuntur!</p>
             <p>Error ex obcaecati ab placeat ratione, dolor, eveniet dolorem eligendi consequatur, voluptate doloremque commodi enim laborum dolore quis perspiciatis neque laudantium id qui sequi itaque dignissimos nam ipsa in. Assumenda veritatis animi possimus, corporis saepe perspiciatis odio repellat facilis cupiditate, modi architecto quibusdam, sed eaque necessitatibus. Laboriosam tenetur qui eos, recusandae laborum optio doloribus similique dolor, porro repellat facere. A corporis iste nobis doloribus sequi recusandae laborum veritatis placeat, ipsa consequuntur nesciunt cupiditate eaque necessitatibus maiores asperiores, ex, voluptate error! Corrupti debitis tempore nam soluta, architecto, voluptates dolor esse quaerat amet blanditiis voluptate aliquid tempora recusandae magnam sit provident ipsa, obcaecati ex totam delectus at reiciendis? Consectetur magni quam atque dignissimos eum culpa, consequatur at quaerat enim ipsum nobis cum!</p>
           </div>
@@ -438,7 +438,7 @@
         <div class="contact-area">
           <div class="contact-side">
             <div class="contact-message">
-              <h2><span class="contact-title-content">Reach out! <span class="emoji">📝</span></span></h2>
+              <h2><span class="contact-title-content">Contáctame <span class="emoji">📝</span></span></h2>
               <p>¿Quieres colaborar en algún proyecto? ¿Tienes alguna pregunta sobre mis servicios que no ves respondida en mi página? ¡Adelante! No dudes en contactarme para lo que sea. Aunque sea algo no mencionado en esta página, seguro que podemos hablarlo.</p>
             </div>
             <div class="back-to-top-link">
