Tweaks to ES text

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </section>
 
     <section class="services">
-      <h2>No soy <italic>superwoman</italic>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
+      <h2>No soy <italics>superwoman</italics>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-es">Translation</li>
@@ -373,7 +373,7 @@
     </section>
 
     <section class="courses">
-      <h2>Nunca pienso dejar de aprender, así que también he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
+      <h2>No pienso dejar de aprender, así que también he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
       <ol class="courses-list education-list">
         <li>
           <div class="bullet">2020</div>
@@ -406,7 +406,7 @@
     </section>
 
     <section class="experience">
-      <h2>Esto es lo que se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span></h2>
+      <h2>Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span></h2>
       <ol class="experience-list education-list">
         <li>
           <div class="bullet">2016</div>
@@ -442,18 +442,18 @@
               <p>¿Quieres colaborar en algún proyecto? ¿Tienes alguna pregunta sobre mis servicios que no ves respondida en mi página? ¡Adelante! No dudes en contactarme para lo que sea. Aunque sea algo no mencionado en esta página, seguro que podemos hablarlo.</p>
             </div>
             <div class="back-to-top-link">
-              <a href="#intro-es">Back to top ↑</a>
+              <a href="#intro-es">Tira parriba ↑</a>
             </div>
           </div>
           <div class="contact-main">
             <form class="contact-form" id="contact-form-es">
-              <label for="contact-from">Email</label>
+              <label for="contact-from">Correo electrónico</label>
               <input id="contact-from-es" type="email" required>
-              <label for="contact-body">Message</label>
+              <label for="contact-body">Mensaje</label>
               <textarea id="contact-body-es" rows="10" required></textarea>
               <button type="submit">
                 <div class="contact-loader" hidden></div>
-                <span class="submit-text">Send</span>
+                <span class="submit-text">Enviar</span>
               </button>
               <div style="clear: both"></div>
             </form>
