More tweaks to ES translations

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             Trabajo como <strong>traductora profesional</strong> del inglés, francés y gallego al español. Soy gallega de nacimiento, pero pasé varios años en Francia, al lado de Ginebra. Me encanta aprender, así que siempre estoy buscando cursos. Si no estoy tejiendo o leyendo, me encontrarás obsesionándome con las comas mal puestas. Siempre he sido amante de la nutrición y la salud mental, pero me encanta lo creativo, por eso busco especializarme en literaria y transcreación. 
           </p>
           <div class="intro-links">
-            <a href="#contact-form-es" title="Scroll down to contact form">Contact</a>
+            <a href="#contact-form-es" title="Scroll down to contact form">Contacto</a>
             <span>·</span>
             <a href="#">CV</a>
             <span>·</span>
@@ -274,12 +274,12 @@
     </section>
 
     <section class="services">
-      <h2>No soy <italics>superwoman</italics>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
+      <h2>No soy <i>superwoman</i>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
       <div class="services-content">
         <ul class="services-titles">
-          <li tabindex="0" aria-describedby="translation-desc-es">Translation</li>
-          <li tabindex="0" aria-describedby="proofreading-desc-es">Proofreading</li>
-          <li tabindex="0" aria-describedby="transcreation-desc-es">Transcreation</li>
+          <li tabindex="0" aria-describedby="translation-desc-es">Traducción</li>
+          <li tabindex="0" aria-describedby="proofreading-desc-es">Revisión</li>
+          <li tabindex="0" aria-describedby="transcreation-desc-es">Transcreación</li>
           <li tabindex="0" aria-describedby="copywriting-desc-es">Copywriting</li>
         </ul>
         <ul class="services-descriptions">
@@ -373,7 +373,7 @@
     </section>
 
     <section class="courses">
-      <h2>No pienso dejar de aprender, así que también he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
+      <h2>No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
       <ol class="courses-list education-list">
         <li>
           <div class="bullet">2020</div>
