Make CV open in new window

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="intro-links">
             <a href="#contact-form-en" title="Scroll down to contact form">Contact</a>
             <span>·</span>
-            <a href="AngelaGV_Translator_EN_Resume.pdf">CV</a>
+            <a href="AngelaGV_Translator_EN_Resume.pdf" target="_blank">CV</a>
             <span>·</span>
             <a target="_blank" href="https://linkedin.com/in/%C3%A1ngela-gra%C3%B1a-varela-90a27090">LinkedIn</a>
             <span>·</span>
@@ -259,7 +259,7 @@
           <div class="intro-links">
             <a href="#contact-form-es" title="Scroll down to contact form">Contacto</a>
             <span>·</span>
-            <a href="Traductora_EN-ES_Angela_Grana_Varela.pdf">CV</a>
+            <a href="Traductora_EN-ES_Angela_Grana_Varela.pdf" target="_blank">CV</a>
             <span>·</span>
             <a target="_blank" href="https://linkedin.com/in/%C3%A1ngela-gra%C3%B1a-varela-90a27090">LinkedIn</a>
             <span>·</span>
