Add Premiere Pro to Tools

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.adobe.com/products/premiere.html">
+            <img height="22" alt="Adobe Premiere Pro's logo" src="adobe-premiere -pro-logo.svg">
+            Premiere Pro
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://asana.com">
             <img height="22" alt="Asana's logo" src="./asana-logo.svg">
             Asana
@@ -310,6 +316,12 @@
           <a target="_blank" href="https://adobe.com/products/illustrator.html">
             <img height="22" alt="Adobe Illustrator's logo" src="./illustrator-logo.svg">
             Illustrator
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.adobe.com/products/premiere.html">
+            <img height="22" alt="Adobe Premiere Pro's logo" src="adobe-premiere -pro-logo.svg">
+            Premiere Pro
           </a>
         </li>
         <li>
