--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button class="lang-button" title="Ver página en español"><span class="flag">🇪🇸</span> ES ❯</button>
 
       <div class="intro-content centered">
-        <img class="intro-portrait" src="./portrait.jpg" alt="Ángela's picture" width="205" height="205">
+        <img class="intro-portrait" src="portrait.jpg" alt="Ángela's picture" width="205" height="205">
         <div class="intro-text">
           <h1 class="intro-title">
             Howdy, I'm Ángela.
@@ -61,19 +61,19 @@
       <ul class="tools-list">
         <li>
           <a target="_blank" href="https://adobe.com/products/photoshop.html">
-            <img height="22" alt="Adobe Photoshop's logo" src="./photoshop-logo.svg">
+            <img height="22" alt="Adobe Photoshop's logo" src="photoshop-logo.svg">
             Photoshop
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/indesign.html">
-            <img height="22" alt="Adobe InDesign's logo" src="./indesign-logo.svg">
+            <img height="22" alt="Adobe InDesign's logo" src="indesign-logo.svg">
             InDesign
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/illustrator.html">
-            <img height="22" alt="Adobe Illustrator's logo" src="./illustrator-logo.svg">
+            <img height="22" alt="Adobe Illustrator's logo" src="illustrator-logo.svg">
             Illustrator
           </a>
         </li>
@@ -85,7 +85,7 @@
         </li>
         <li>
           <a target="_blank" href="https://asana.com">
-            <img height="22" alt="Asana's logo" src="./asana-logo.svg">
+            <img height="22" alt="Asana's logo" src=asana-logo.svg">
             Asana
           </a>
         </li>
@@ -253,7 +253,7 @@
       <button class="lang-button" title="Go to English version">❮ EN <span class="flag">🇬🇧</span></button>
 
       <div class="intro-content centered">
-        <img class="intro-portrait" src="./portrait.jpg" alt="Ángela's picture" width="205" height="205">
+        <img class="intro-portrait" src="portrait.jpg" alt="Ángela's picture" width="205" height="205">
         <div class="intro-text">
           <h1 class="intro-title">
             Hola, soy Ángela.
@@ -302,19 +302,19 @@
       <ul class="tools-list">
         <li>
           <a target="_blank" href="https://adobe.com/products/photoshop.html">
-            <img height="22" alt="Adobe Photoshop's logo" src="./photoshop-logo.svg">
+            <img height="22" alt="Adobe Photoshop's logo" src="photoshop-logo.svg">
             Photoshop
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/indesign.html">
-            <img height="22" alt="Adobe InDesign's logo" src="./indesign-logo.svg">
+            <img height="22" alt="Adobe InDesign's logo" src="indesign-logo.svg">
             InDesign
           </a>
         </li>
         <li>
           <a target="_blank" href="https://adobe.com/products/illustrator.html">
-            <img height="22" alt="Adobe Illustrator's logo" src="./illustrator-logo.svg">
+            <img height="22" alt="Adobe Illustrator's logo" src="illustrator-logo.svg">
             Illustrator
           </a>
         </li>
@@ -326,7 +326,7 @@
         </li>
         <li>
           <a target="_blank" href="https://asana.com">
-            <img height="22" alt="Asana's logo" src="./asana-logo.svg">
+            <img height="22" alt="Asana's logo" src="asana-logo.svg">
             Asana
           </a>
         </li>
