--- a/index.html
+++ b/index.html
@@ -803,22 +803,22 @@
       border-radius: 5px;
     }
 
-    .education-list li {
+    .education-list > li {
       display: flex;
       flex-direction: row;
       position: relative;
       margin: 20px 0;
     }
 
-    .education-list li:first-of-type {
+    .education-list > li:first-of-type {
       margin-top: 0;
     }
 
-    .education-list li:last-of-type {
+    .education-list > li:last-of-type {
       margin-bottom: 0;
     }
 
-    .education-list li .bullet {
+    .education-list > li .bullet {
       display: inline-block;
       height: 40px;
       width: 40px;
@@ -848,43 +848,58 @@
       left: -40px;
     }
 
-    .education-list li .content {
+    .education-list > li .content {
       margin-left: 14px;
     }
 
-    .education-list li h3 {
+    .education-list > li h3 {
       margin: 0;
       font-size: 18px;
       font-weight: normal;
     }
 
-    .experience-list li h3 {
+    .experience-list > li h3 {
       margin-top: 9px;
     }
 
-    .education-list li h4 {
+    .education-list > li h4 {
       margin: 0;
       font-size: 15px;
       font-weight: normal;
       color: #555;
     }
 
-    .education-list li p {
+    .education-list > li p {
       line-height: 140%;
       font-size: 15px;
       color: #555;
     }
 
-    .education-list li p:last-child {
+    .education-list > li p:last-child {
       margin-bottom: 0;
     }
 
-    .education-list li a {
+    .education-list > li ul {
+      padding-left: 15px;
+      line-height: 140%;
+      font-size: 15px;
+      color: #555;
+    }
+
+    .education-list > li ul > li {
+      margin-bottom: 4px;
+    }
+
+    .education-list > li ul > li:last-child {
+      margin-bottom: 0;
+    }
+
+    .education-list > li a {
       color: #895599;
       padding-bottom: 1px;
     }
 
-    .education-list li a:hover {
+    .education-list > li a:hover {
       border-bottom: 2px solid #895599;
     }
 
