Fix EN Asana logo image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </li>
         <li>
           <a target="_blank" href="https://asana.com">
-            <img height="22" alt="Asana's logo" src=asana-logo.svg">
+            <img height="22" alt="Asana's logo" src="asana-logo.svg">
             Asana
           </a>
         </li>
