Small improvements to copy

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Curso en traducción romántica y erótica</h3>
+            <h3>Course in romantic and erotic translation EN - ES</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
@@ -162,14 +162,14 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Corrección ortográfica: la puntuación</h3>
-            <h4>Cursiva (RAE)</h4>
+            <h3>Punctuation and orthography course by RAE</h3>
+            <h4>Cursiva</h4>
           </div>
         </li>
         <li>
           <div class="bullet">2021</div>
           <div class="content">
-            <h3>Traducción audiovisual: Subtitulado</h3>
+            <h3>Subtitling and audiovisual translation</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
